# ManaTeam

./: .gitignore  .travis.yml  LICENSE  README.md  Vagrantfile
7keys-1.0/: CMakeLists.txt
7keys-1.0/engine/: CMakeLists.txt
7keys-1.0/engine/include/: bitmap.h  camera.h  frontend.h  game.h  settings.h  text.h  texture.h
7keys-1.0/engine/src/: animation.cpp  audiomanager.cpp  button.cpp  environment.cpp  image.cpp  music.cpp  object.cpp  rect.cpp  resourcesmanager.cpp  settings.cpp  sprite.cpp
7keys-1.0/include/: 7keys.h  extras.h  guard.h  item.h  map.h  pause.h  player.h  sight.h
7keys-1.0/src/: extras.cpp  options.cpp  sight.cpp  square.cpp
Game/: CMakeLists.txt
Game/engine/include/: button.h  image.h  music.h  soundeffect.h  sprite.h
Game/engine/src/: bitmap.cpp  camera.cpp  eventsmanager.cpp  frontend.cpp  keyboardevent.cpp  listener.cpp  mousebuttonevent.cpp  mousemotionevent.cpp  soundeffect.cpp  texture.cpp
Game/include/: colision.h  ghost.h  quadtree.h  room.h  square.h  stage.h
Game/src/: 7keys.cpp  ghost.cpp  guard.cpp  item.cpp  pause.cpp  room.cpp  stage.cpp  titlescreen.cpp  weapon.cpp
deb/DEBIAN/: changelog  control  copyright
engine/include/: audiomanagerwrapper.h
engine/src/: audiomanagerwrapper.cpp  canvas.cpp  font.cpp  game.cpp  joystickevent.cpp  text.cpp  video.cpp
include/: creditos.h  options.h
rpm/: 7keys.spec
src/: boss.cpp  creditos.cpp  map.cpp  player.cpp
